--- a/t_discografico.html
+++ b/t_discografico.html
@@ -185,7 +185,9 @@
                 <tr>
                   <td width="130" height="20"><h3>2011</h3></td>
                 </tr>
+
                 <tr>
+                  <td><a href="http://www.jamendo.com/es/album/176417" target="_blank"><img src="imagenes/portadas/EBDP0055_thumb.jpg" border="0" /></a></td>
                   <td><a href="http://www.jamendo.com/es/album/98925" target="_blank"><img src="imagenes/portadas/cesar.jpg" border="0" /></a></td>
                 </tr>
 
