--- a/t_discografico_sol.html
+++ b/t_discografico_sol.html
@@ -159,6 +159,7 @@
                 </tr>
 
                 <tr>
+                  <td><a href="http://www.jamendo.com/es/album/176417" target="_blank"><img src="imagenes/portadas/EBDP0055_thumb.jpg" border="0" /></a></td>
                   <td><a href="http://www.jamendo.com/es/album/122484" target="_blank"><img src="imagenes/portadas/cimbalos.jpg" border="0" /></a></td>
                   <td width="130" height="134"><a href="http://www.jamendo.com/es/album/69707" target="_blank"><img src="imagenes/portadas/densidades.jpg" alt="En Busca del Pasto: Densidades Fluviales" width="130" height="130" border="0" /></a></td>
                 </tr>
