Nueva versión de la web. Empezamos por la versión 10, aunque creo que es la 12.

--- a/index.html
+++ b/index.html
@@ -1,54 +1,214 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="es">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<meta name="description" content="EN BUSCA DEL PASTO. Proyecto de improvisación"/>
-	<meta http-equiv="Content-Language" content="es"/>
-	<link rel="alternate" href="index-en" hreflang="en" type="text/html">
-	<title>EBDP | Home</title>
-	<link href="hoja_estilos.css" rel="stylesheet" type="text/css" />
-	<link rel="shortcut icon" href="favicon.ico" />
-</head>
+<!DOCTYPE HTML>
+<!--
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>En Busca Del Pasto</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-
-<body>
-	
-	<header>
-	
-		<img src="images/logo_2014.png" />
-	
-	</header>
-	
-	<div id="menu" >
-	
+		<div id="vaca">
+			<img class="vaca" src="images/icon-ebdp.png"/>
+		</div>
 		
-		<a href="ebdp.html" ><div class="button">EBDP<img src="images/icon-ebdp.png" /></div></a>
 		
-		<a href="https://vimeo.com/user286261" target="_blank" ><div class="button">VÍDEOS<img src="images/icon-vimeo.png" /></div></a>
-
-		<a href="https://www.jamendo.com/artist/944/en-busca-del-pasto/albums" target="_blank" ><div class="button">DISCOGRAFÍA<img src="images/icon-jamendo.png" /></div></a>
-		
-		<a href="contacto.html" ><div class="button">CONTACTO<img src="images/icon-contacto.png" /></div></a>
-		
+		<div id="idioma">
+			<a class="idioma" href="index-en.html">English</a>
 		</div>
 	
-	<div id="lang">
-	
-		<a href="index-en.html" >English ●</a>
-	
-	</div>
-	
-		
-</body>
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<!--
+						<div class="logo">
+							<span class="icon fa-gem"></span>
+							<i class="fas fa-paw"></i>
+							<img src="images/icon-ebdp.png"> 
+						</div>
+						-->
+						<div class="content">
+							<div class="inner">
+								<h1>En Busca Del Pasto</h1>
+								<p>Proyecto de improvisación</p>
+							</div>
+						</div>
+						<nav>
+							<ul>
+								<li><a href="#intro">EBDP</a></li>
+								<li><a href="#work">Bitácora</a></li>
+								<li><a href="#about">Archivo</a></li>
+								<li><a href="#contact">Contacto</a></li>
+								<!--<li><a href="#elements">Elements</a></li>-->
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- Intro -->
+							<article id="intro">
+								<h2 class="major">EBDP</h2>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<p>En Busca Del Pasto (EBDP) nació en 2003 como un proyecto de estricta improvisación musical e investigación sonora, que ha ido poniendo el acento cada vez más sobre la dimensión escénica y performativa de la música como “tiempo real” y como fenómeno colectivo. A día de hoy EBDP cuenta con un registro discográfico de más de 50 álbumes publicados en Internet bajo licencias copy left, pero aún así lo más importante está en los directos, en los que no debemos preguntarnos solamente “¿Qué es lo que suena?”, sino también “¿Qué está sucediendo aquí?”.</p>
+								<p>EBDP no sólo trabaja con la música, sino también con la escenografía, las poses, las posibilidades de experimentación en vivo, de expectación o de participación del público..., jugando con las condiciones en las que tendrá lugar cada vez la improvisación. ¡Nada es superfluo! Y esto es lo fundamental: siendo un evento estrictamente improvisado, lo que al final suceda allí nadie lo sabe.</p>
+							</article>
+
+						<!-- Work -->
+							<article id="work">
+								<h2 class="major">BITÁCORA</h2>
+								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+		<h3>2019</h3>
+		<p>· Oct/27 · Festival PERIFERIAS 20.0. CC Manuel Benito Moliner (Huesca).</p>
+		<p>· Sep/28 · Festival ZARATA 2019. Círculo de Bellas Artes (Madrid).</p>
+		<h3>2018</h3>
+		<p>· Jun/16 · EBDP 15º Aniversario. Observatorio Musical (Madrid).</p>
+		<h3>2017</h3>
+		<p>· Abr/22 · Festival RARAS MÚSICAS #2017. Nadir Gallery (Madrid).</p>
+		<h3>2016</h3>
+		<p>· Jun/04 · 1er Maratón RARAS MÚSICAS. Lanau - Minima Espacio Escénico (Madrid).</p>
+		<h3>2015</h3>
+		<p>· Oct/18 · RARAS MÚSICAS #047. Teatro La Puerta Estrecha (Madrid).</p>
+		<p>· May/02 · Taller de improvisación músico-escénica. Centro Creativo Quinta del Sordo (Madrid).</p>
+		<p>· Ene/21 · Le Plan B (Poitiers, Francia).</p>
+		<h3>2014</h3>
+		<p>· Oct/18 · RARAS MÚSICAS #030. Espacio en Blanco (Madrid).</p>
+		<p>· Sep/25 · Encuentro de Improvisadores. Taberna Alabanda (Madrid).</p>
+		<p>· May/10 · I Festival Castizo Underground. La Casa de los Jacintos (Madrid).</p>
+		<p>· Mar/12 · Taberna Alabanda (Madrid).</p>
+		<p>. Ene/31 · Presentación de INTACT Project. Liu-Multiple/Planetario del Space Mendés-France (Poitiers).</p>
+		<p>· Ene/22 · Presentación de POLIZONE (INTACT Project). MediaLab-Prado (Madrid).</p>
+		<h3>2013</h3>
+		<p>· Nov/14 · Con Zan Hoffman. Taberna Alabanda (Madrid).</p>
+		<p>· Oct/27 · Taberna Alabanda (Madrid).</p>
+		<p>· Sep/29 · Encuentro de Improvisadores. Taberna Alabanda (Madrid).</p>
+		<p>· Jul/18 · Presentación de OVERFLOW (INTACT Project). MediaLab-Prado (Madrid).</p>
+		<p>· Feb/09 · Homenaje a José Val del Omar. Sala El Círculo (Cuenca).</p>
+		<p>· Ene/12 · Concierto ALINA. Con Trío Antimanierista. Taberna Alabanda (Madrid).</p>
+		<h3>2012</h3>
+		<p>· Jun/01 · CICLO DE MÚSICA IMPREVISTA #6. Taberna Alabanda (Madrid).</p>
+		<p>· May/04 · CICLO DE MÚSICA IMPREVISTA #5. La Tirana Malas Artes (Madrid).</p>
+		<p>· Mar/02 · CICLO DE MÚSICA IMPREVISTA #4.2. Con The Rebel Octopus. El Caldero de Cobre (Madrid).</p>
+		<p>· Mar/01 · CICLO DE MÚSICA IMPREVISTA #4.1. Taberna Alabanda (Madrid).</p>
+		<p>· Feb/03 · CICLO DE MÚSICA IMPREVISTA #3.2. Taberna Alabanda (Madrid).</p>
+		<p>· Feb/02 · CICLO DE MÚSICA IMPREVISTA #3.1. Taberna Alabanda (Madrid).</p>
+		<h3>2011</h3>
+		<p>· Dic/02 · CICLO DE MÚSICA IMPREVISTA #2.2. La Tirana Malas Artes (Madrid).</p>
+		<p>· Nov/04 · CICLO DE MÚSICA IMPREVISTA #1.2. Taberna Alabanda (Madrid).</p>
+		<p>· Nov/03 · CICLO DE MÚSICA IMPREVISTA #1.1. La Faena II (Madrid).</p>
+		<p>· May/12 · Conciertos Mínimos. Studio Banana (Madrid).</p>
+		<p>· Abr/05 · "No Works Pop Machine". Los Martes Experimentales (Colectivo Priovra). Pepa Trencha (Madrid).</p>
+		<p>· Mar/04 · Festival REC-Madrid. Sala Siroco (Madrid).</p>
+		<h3>2010</h3>
+		<p>· Dic/11 · Homenaje a Andréi Tarkovsky. Sala Magatzems Wall&Video (Valencia).</p>
+		<p>· May/30 · "Pasto al despiece". ARTe SONoro OFF (InSonora+Casa Encendida). Aula 11 (Madrid).</p>
+		<p>· Abr/17 · AvLab - Sound It Yourself. MediaLab-Prado (Madrid).</p>
+		<p>· Ene/16 · Con NanTx. La Casa de los Jacintos (Madrid).</p>
+		<h3>2009</h3>
+		<p>· Nov/11 · Sala Magatzems Wall&Video (Valencia).</p>
+		<p>· Nov/05 · Presentación de “Microvoyages” (Esther Ruiz). Auditorio de Galicia (Santiago de Compostela).</p>
+		<p>· Nov/01 · Con Zan Hoffman y Minuit de Lacroix. La Casa de los Jacintos (Madrid).</p>
+		<p>· Abr/25 · Muestra de Confusion Group. Escuela de Baile Teatro Calderón (Madrid).</p>
+		<h3>2008</h3>
+		<p>· Nov/30 · Presentación del Netlabel Draining Beats on the Brain. Sala Básico (Madrid).</p>
+		<p>· Nov/29 · Con Zan Hoffman. La Casa de los Jacintos (Madrid).</p>
+		<p>· Nov/28 · Festival ULTERIOR. 14-30 Espacio Joven (Madrid).</p>
+		<p>· Nov/20 · NetLeft Label Vol. I. Plataforma Intersónica (Madrid).</p>
+		<p>· Sep/14 · InSonora IV. Instituto Europeo de Diseño (Madrid).</p>
+		<p>· Jun/13 · Presentación de SALAMI. Escuela Arte 10 (Madrid).</p>
+		<p>· Abr/28 · "Taller de Expresión Espontanea". XLIV Congreso de Jóvenes Filósofos. Universidad de Granada.</p>
+		<p>· Mar/01 · Ciclo ATENEO ABIERTO. Auditorio del Ateneo de Madrid.</p>
+		<h3>2007</h3>
+		<p>· Oct/26 · "Pasto al desnudo". La Casa de los Jacintos (Madrid).</p>
+		<p>· Jul/07 · Festival MIRADOR 07. Matadero-Madrid/Intermediae (Madrid).</p>
+		<p>· Jun/29 · Casa de los Jacintos (Madrid).</p>
+		<p>· Jun/21 · Café La Palma (Madrid).</p>
+		<p>· Jun/08 · Arteria Gráfica (Madrid).</p>
+		<p>· May/25 · I Concurso Audiovisual de La Casa de los Jacintos. La Casa de los Jacintos (Madrid).</p>
+		<p>· May/22 · "Restrospectiva II". Paraninfo Facultad Filosofia UCM (Madrid).</p>
+		<p>· May/18 · Día Internacional de los Museos. Biblioteca Nacional (Madrid).</p>
+		<p>· Abr/27 · "Oraciones". La Casa de los Jacintos (Madrid).</p>
+		<p>· Abr/13 · "Anatomía de la intimidad". XLIV Congreso de Jóvenes Filósofos. La escalera de Jacob (Madrid).</p>
+		<p>· Abr/06 · CUE-Berlin. Weissenseer Freitag (Berlín).</p>
+		<p>· Mar/30 · "Retrospectiva I". La Casa de los Jacintos (Madrid).</p>
+		<p>· Feb/23 · "Silencios II: Cielo, mar, playa". La Casa de los Jacintos (Madrid).</p>
+		<p>· Ene/26 · "Digresiones IV: Variaciones de un diaporama". La Casa de los Jacintos (Madrid).</p>
+		<p>· Ene/13 · "Este lugar". AvLab. MediaLab-Conde Duque (Madrid).</p>
+		<h3>2006</h3>
+		<p>· Dic/29 · "Silencios I: Habitación vacía". La Casa de los Jacintos (Madrid).</p>
+		<p>· Nov/24 · La Casa de los Jacintos (Madrid).</p>
+		<p>· Nov/04 · Teatro Artépolis (Madrid).</p>
+		<p>· Abr/22 · La Casa de los Jacintos (Madrid).</p>
+		<p>· Abr/12 · Sala L'Ost (Berlín).</p>
+		<p>· Feb/26 · La Casa de los Jacintos (Madrid).</p>
+		<h3>2005</h3>
+		<p>· Jul/25 · Finca La Cerca del Trigo (Cercedilla).</p>
+		<p>· Jun/25 · Finca El Rancho (El Boalo).</p>
+		<p>· May/05 · Teatro Artépolis (Madrid).</p>
+		<p>· Abr/22 · Teatro Artépolis (Madrid).</p>
+		<h3>2004</h3>
+		<p>· Dic/03 · Sala El Juglar (Madrid).</p>
+		<p>· Jun/25 · Barrio de Canillejas (Madrid).</p>
+		<p>· Jun/22 · Sala El Juglar (Madrid).</p>
+		<p>· Mar/31 · Fiesta de la Primavera. Facultad de Bellas Artes UCM (Madrid).</p>
+		<p>· Ene/18 · Primer concierto al público de EBDP. La Casa de los Jacintos (Madrid).</p>
+	</article>
+
+						<!-- About -->
+							<article id="about">
+								<h2 class="major">ARCHIVO</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<h3>DISCOGRAFÍA</h3>
+								<p>EBDP entiende la improvisación como experimentación, y la experimentación como improvisación. No hay unos ensayos previos sobre los que luego se trabaje para crear "obras"; a EBDP le interesa el proceso mismo, la experimentación misma. Bajo las consignas "Nada es superfluo" y "No hay error", EBDP ha intentado grabar y compartir todos sus experimentos, tomando los ensayos como sesiones de grabación, y las sesiones de grabación y los directos como verdaderos ensayos experimentales. Por eso el fondo discográfico de EBDP se acerca hoy a los 60 albums, a los que puedes acceder gratuitamente a través de Jamendo:</p>
+								<a href="https://www.jamendo.com/artist/944/en-busca-del-pasto/albums" target="_blank" ><img class="icono" src="images/icon-jamendo.png" alt="" /></a>
+								<hr>
+								<h3>VIDEOGRAFÍA</h3>
+								<p>Y dado que la dimensión escénica y performativa de la música es crucial en el trabajo de EBDP, también puedes acceder a varios vídeos con muestras de actuaciones y algún que otro ensayo documental:</p>
+								<a href="https://vimeo.com/user286261" target="_blank" ><img class="icono" src="images/icon-vimeo.png" alt="" /></a>
+																
+							</article>
+
+						<!-- Contact -->
+							<article id="contact">
+								<h2 class="major">CONTACTO</h2>
+								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<h4>enbuscadelpasto@gmail.com</h4>
+								<h4>(+34) 650 056 106 (Jorge)</h4>
+							</article>
+
+						
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<p class="copyright">Quien no pasta, perece...</p>
+					</footer>
+
+			</div>
 
 
+		<!-- BG -->
+
+			<div id="bg"></div>
+
+			
+			
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
-
-
-
-
-
-
-
-
-
