Changes from Jorge with new section

--- a/web/index-en.html
+++ b/web/index-en.html
@@ -50,6 +50,12 @@
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
+						<nav>
+							<ul>
+								<li><a href="#film">Grass Between Cobblestones</a></li>
+								<!--<li><a href="#elements">Elements</a></li>-->
+							</ul>
+						</nav>
 					</header>
 
 				<!-- Main -->
@@ -186,7 +192,48 @@
 								<h4>(+34) 650 056 106 (Jorge)</h4>
 							</article>
 
-						
+						<!-- film -->
+							<article id="film">
+								<h2 class="major">GRASS BETWEEN COBBLESTONES</h2>
+								<h3>Essay-documentary on free improvisation in Madrid (2021)</h3>
+								<span class="image main"><img src="images/pic05.jpg" alt="" /></span>
+								<p>Free improvisation is perhaps the most experimental and avant-garde genre of contemporary music, and for this reason it is also the great unknown (despite having existed for decades in Europe, North America or Japan, and certainly today it is represented in a multitude of countries around the world). Since it starts from a principle of "free creativity", this genre is tremendously diverse, with no aesthetic or formal limits, open to the use of all kinds of instruments or objects, open to mix with other disciplines (such as dance, performance, video-art or poetry...), and, above all, this is a genre where each musician explores their own language and personality, integrating their own references and experiences and making them dialogue with other musicians.</p>
+								<span><img class="fotograma" src="images/fotograma01.jpg" alt="" /><img class="fotograma" src="images/fotograma02.jpg" alt="" /><img class="fotograma" src="images/fotograma03.jpg" alt="" /><img class="fotograma" src="images/fotograma04.jpg" alt="" /><img class="fotograma" src="images/fotograma05.jpg" alt="" /><img class="fotograma" src="images/fotograma06.jpg" alt="" /><img class="fotograma" src="images/fotograma07.jpg" alt="" /><img class="fotograma" src="images/fotograma08.jpg" alt="" /><img class="fotograma" src="images/fotograma09.jpg" alt="" /><img class="fotograma" src="images/fotograma10.jpg" alt="" /></span>
+								<p></p>
+								<p>Planned and led by En Busca Del Pasto, this film, made as an essay-documentary, shows this diversity through around thirty free improvisers based in Madrid, exploring the backbone of this peculiar practice: spontaneity, risk and experimentation; resistance and tolerance; openness, dialogue and solidarity among black sheep. A music that oscillates between aesthetic reflection, political stance and playful and therapeutic dispersion. Between the strange, the delicate and the wild. A practice on the fringes of official circuits and markets, but very lively, very open, very free, like the grass growing between the cobblestones. A film about music and life.</p>
+								<iframe class="vimeo" src="https://player.vimeo.com/video/563295800?h=652e4a7855" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+								<h3>Credits</h3>
+<p></p>
+<p><b>En Busca Del Pasto:</b></p>
+<p>Diego Agulló, Jorge Ruiz, Juan Morales, Pablo Delgado de Torres, Pedro Pons, Ricardo Sanz and Roberto Rodrigo.</p>
+<p><b>With (Music / Performance / Voices:</b></p>
+<p>Alba Morín, Antonia Funes, Aramo Olaya, Carlos Costa, Cecilia Gala, Chefa Alonso, Chema Chacón, Ciro Pons, David Area, Diana Bonilla, Diego Perinetti, Duna, Elias Riviere, Elsa Mateu, Ernesto Novales, Gregorio Kazaroff, Héctor Roma, Isabel Corullón, Ivor R. Tamplin, Javier Entonado, Jorge Cabadas, Julián Elvira, Luis Soler, Melisa Medina, "Melón" Jiménez, Paloma Carrasco, Ricardo Tejero, Tomás Gris, Víctor Sequí, Wade Matthews.</p>
+<p><b>And the members of the Improvisation Orchestra FARMACIA 13:</b></p>
+<p>África Clua, Ana Cuenca, Berta Miranda, Christian Fernández, Eva Frey, Flor Guerin, Francisco Cabeza de Vaca, Héctor Roma, María Prado, Miguel Ángel Barreto and Chefa Alonso (dirección).</p>
+<p><b>Production:</b> Jorge Ruiz Abánades</p>
+<p><b>Production assistants:</b> Diego Agulló and Juan Morales</p>
+<p><b>Photography:</b> Luis Acaraz</p>
+<p><b>Camara operators:</b> Luis Alcaraz and Jorge Ruiz Abánades</p>
+<p><b>Archive images of En Busca Del Pasto:</b> En Busca Del Pasto</p>
+<p><b>Archive images of Música Libre and Raras Músicas:</b> Gregorio Kazaroff and Marina Paradela</p>
+<p><b>Images from Pixabay.com:</b> Roberto D'Amico</p>
+<p><b>Images from Pexels.com</b> Alex Fu, Cottonbro, Egor Kunovsky, Kelly Lacy, Kindel Media and Ni Pen</p>
+<p><b>Films quoted:</b> "Indiana Jones, En Busca Del Parca Perdida", Steven Spielberg (1981) and "La infancia de Iván", Adrei Tarkovsky (1962)</p>
+<p><b>Sound:</b> Valdelamor</p>
+<p><b>Recording final session (Aula de Músicas):</b> Roberto Rodrigo</p>
+<p><b>Sound Technician at Ágora Sol Radio:</b> César Pradíes</p>
+<p><b>Edition:</b> Jorge Ruiz Abánades</p>
+<p><b>Color and DCP Master</b> Adrián Aragonés</p>
+<p><b>Concept and script:</b> Diego Agulló and Jorge Ruiz Abánades</p>
+<p><b>Assistant Director:</b> Diego Agulló</p>
+<p><b>Direction:</b> Jorge Ruiz Abánades</p>
+<p>---</p>
+<p><b>Acknowledgements:</b></p>
+<p>Ana Fernández-Cid, Ana Mallo, Antonio Sánchez, Arsenio Ruiz, Cota, Edward Readman, Esther Martínez, Eugenio Tardón, Isa, Jaime Espinosa, José Juarros, Juancar Castillo, Juan López Ciudad, Juan Serrano, Kikoto, Laureao Padrón,Natalia Rodríguez García, Santiago Sánchez and Sonia Noya.</p>
+<p>---</p>
+<p><b>Project carried out with the support of the Madrid City Council's programme of aid for creation and mobility (2019).</b></p>
+<span class="image main"><img src="images/logos-film.png" alt="" /></span>
+							</article>
 
 					</div>
 
