--- a/web/index.html
+++ b/web/index.html
@@ -50,6 +50,12 @@
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
+						<nav>
+							<ul>
+								<li><a href="#film">Hierba entre los adoquines</a></li>
+								<!--<li><a href="#elements">Elements</a></li>-->
+							</ul>
+						</nav>
 					</header>
 
 				<!-- Main -->
@@ -183,6 +189,49 @@
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 								<h4>enbuscadelpasto@gmail.com</h4>
 								<h4>(+34) 650 056 106 (Jorge)</h4>
+							</article>
+							
+						<!-- film -->
+							<article id="film">
+								<h2 class="major">HIERBA ENTRE LOS ADOQUINES</h2>
+								<h3>Un ensayo-documental sobre la libre improvisación en Madrid (2021)</h3>
+								<span class="image main"><img src="images/pic05.jpg" alt="" /></span>
+								<p>La improvisación libre es quizá el género más experimental y vanguardista de la música contemporánea, y por ello es también el gran desconocido (a pesar de llevar décadas existiendo en Europa, Norte América o Japón, y que seguro hoy tiene representación en una multitud de países alrededor del mundo). Puesto que arranca de un principio de "libre creatividad", este género es además tremendamente diverso, no existiendo límites estéticos o formales, abierto al uso de todo tipo de instrumentos u objetos, abierto a mezclarse con otras disciplinas (como la danza, la performance, el vídeo-arte o la poesía…), y, sobre todo, este es un género donde cada músico explora su propio lenguaje y personalidad, integrando sus propias referencias y experiencias y haciéndolas dialogar con otros músicos.</p>
+								<span><img class="fotograma" src="images/fotograma01.jpg" alt="" /><img class="fotograma" src="images/fotograma02.jpg" alt="" /><img class="fotograma" src="images/fotograma03.jpg" alt="" /><img class="fotograma" src="images/fotograma04.jpg" alt="" /><img class="fotograma" src="images/fotograma05.jpg" alt="" /><img class="fotograma" src="images/fotograma06.jpg" alt="" /><img class="fotograma" src="images/fotograma07.jpg" alt="" /><img class="fotograma" src="images/fotograma08.jpg" alt="" /><img class="fotograma" src="images/fotograma09.jpg" alt="" /><img class="fotograma" src="images/fotograma10.jpg" alt="" /></span>
+								<p></p>
+								<p>Planeada y liderada por En Busca Del Pasto, esta película, elaborada a modo de ensayo-documental, muestra esa diversidad a través de una treintena de libre-improvisadores afincados en su misma ciudad (Madrid), explorando las líneas vertebrales de esta peculiar práctica: espontaneidad, riesgo y experimentación; resistencia y tolerancia; apertura, diálogo y solidaridad entre ovejas negras. Una música que oscila entre la reflexión estética, la posición política y la dispersión lúdica y terapéutica. Entre lo raro, lo delicado y lo salvaje. Una práctica al margen de los circuitos y mercados oficiales, pero muy viva, muy abierta, muy libre, como la hierba que crece entre los adoquines. Una película sobre música y vida.</p>
+								<iframe class="vimeo" src="https://player.vimeo.com/video/563295800?h=652e4a7855" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+								<h3>Créditos</h3>
+<p></p>
+<p><b>En Busca Del Pasto:</b></p>
+<p>Diego Agulló, Jorge Ruiz, Juan Morales, Pablo Delgado de Torres, Pedro Pons, Ricardo Sanz y Roberto Rodrigo.</p>
+<p><b>Acompañados por (Música / Performance / Voces:</b></p>
+<p>Alba Morín, Antonia Funes, Aramo Olaya, Carlos Costa, Cecilia Gala, Chefa Alonso, Chema Chacón, Ciro Pons, David Area, Diana Bonilla, Diego Perinetti, Duna, Elias Riviere, Elsa Mateu, Ernesto Novales, Gregorio Kazaroff, Héctor Roma, Isabel Corullón, Ivor R. Tamplin, Javier Entonado, Jorge Cabadas, Julián Elvira, Luis Soler, Melisa Medina, "Melón" Jiménez, Paloma Carrasco, Ricardo Tejero, Tomás Gris, Víctor Sequí, Wade Matthews.</p>
+<p><b>Y los miembros de la Orquesta de Improvisación FARMACIA 13:</b></p>
+<p>África Clua, Ana Cuenca, Berta Miranda, Christian Fernández, Eva Frey, Flor Guerin, Francisco Cabeza de Vaca, Héctor Roma, María Prado, Miguel Ángel Barreto y Chefa Alonso (dirección).</p>
+<p><b>Producción:</b> Jorge Ruiz Abánades</p>
+<p><b>Ayudantes de producción:</b> Diego Agulló y Juan Morales</p>
+<p><b>Fotografía:</b> Luis Acaraz</p>
+<p><b>Operadores de cámara:</b> Luis Alcaraz y Jorge Ruiz Abánades</p>
+<p><b>Imágenes de archivo de En Busca Del Pasto:</b> En Busca Del Pasto</p>
+<p><b>Imágenes de archivo de Música Libre y Raras Músicas:</b> Gregorio Kazaroff y Marina Paradela</p>
+<p><b>Imágenes de librería Pixabay.com:</b> Roberto D'Amico</p>
+<p><b>Imágenes de librería Pexels.com</b> Alex Fu, Cottonbro, Egor Kunovsky, Kelly Lacy, Kindel Media y Ni Pen</p>
+<p><b>Películas citadas:</b> "Indiana Jones, En Busca Del Parca Perdida", Steven Spielberg (1981) y "La infancia de Iván", Adrei Tarkovsky (1962)</p>
+<p><b>Máster de Sonido:</b> Valdelamor</p>
+<p><b>Grabación sesión final (Aula de Músicas):</b> Roberto Rodrigo</p>
+<p><b>Técnico en Ágora Sol Radio:</b> César Pradíes</p>
+<p><b>Edición:</b> Jorge Ruiz Abánades</p>
+<p><b>Color y Máster DCP</b> Adrián Aragonés</p>
+<p><b>Concepto y guión:</b> Diego Agulló y Jorge Ruiz Abánades</p>
+<p><b>Ayudante de dirección:</b> Diego Agulló</p>
+<p><b>Dirección:</b> Jorge Ruiz Abánades</p>
+<p>---</p>
+<p><b>Agradecimientos:</b></p>
+<p>Ana Fernández-Cid, Ana Mallo, Antonio Sánchez, Arsenio Ruiz, Cota, Edward Readman, Esther Martínez, Eugenio Tardón, Isa, Jaime Espinosa, José Juarros, Juancar Castillo, Juan López Ciudad, Juan Serrano, Kikoto, Laureao Padrón,Natalia Rodríguez García, Santiago Sánchez y Sonia Noya.</p>
+<p>---</p>
+<p><b>Proyecto realizado con el apoyo del programa de ayudas a la creación y la movilidad del Ayuntamiento de Madrid (2019).</b></p>
+<span class="image main"><img src="images/logos-film.png" alt="" /></span>
 							</article>
 
 						
