Spanish should be Español

--- a/web/index-en.html
+++ b/web/index-en.html
@@ -19,7 +19,7 @@
 		</div>
 	
 		<div id="idioma">
-			<a class="idioma" href="index.html">Spanish</a>
+			<a class="idioma" href="index.html">Español</a>
 		</div>
 		
 		
