--- a/web/index.html
+++ b/web/index.html
@@ -73,6 +73,23 @@
 							<article id="work">
 								<h2 class="major">BITÁCORA</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+		<h3>2022</h3>
+		<p>· Nov/22 · HIERBA ENTRE LOS ADOQUINES - Semifinalista en el Prage Underground FIlm Fest.</p>
+		<p>· Nov/22 · HIERBA ENTRE LOS ADOQUINES - Selección oficial en el XVIII Festival Transterritorial de Cine Underground (Buenos Aires).</p>
+		<p>· Oct/22 · HIERBA ENTRE LOS ADOQUINES - Semifinalista en el Peloponnisos International documentary Festival (Kalamata, Grecia).</p>
+		<p>· Sep/22 · Actuación de Jorge Ruiz Abánades en el Encuentro Europeo de Improvisacón - Danza y Música (Niza)</p>
+		<p>· Sep/22 · HIERBA ENTRE LOS ADOQUINES - Presentación en el Encuentro Europeo de Improvisacón - Danza y Música (Niza)</p>
+		<p>· Sep/22 · HIERBA ENTRE LOS ADOQUINES - Semifinalista en el Kansas Arthouse Music and Film Festival.</p>
+		<p>· May/22 · HIERBA ENTRE LOS ADOQUINES - Nominada a Mejor Documental en el Portland New Alternative Voices.</p>
+		<p>· May/22 · HIERBA ENTRE LOS ADOQUINES - Semifinalista en el New Filmmakers New Orleans.</p>
+		<p>· Mar/22 · HIERBA ENTRE LOS ADOQUINES - Selección oficial en el International World Film Awards (Nueva York).</p>
+		<p>· Feb/22 · HIERBA ENTRE LOS ADOQUINES - Selección oficial en el International Documentary Film Awards (Amsterdam).</p>
+		<p>· Ene/22 · HIERBA ENTRE LOS ADOQUINES - Selección oficial en el Best Documentary Award (Londres).</p>
+		<h3>2021</h3>
+		<p>· Nov/21 · HIERBA ENTRE LOS ADOQUINES - Nominada a Mejor Documental en el Rome Independent Prisma Awards</p>
+		<p>· Nov/21 · HIERBA ENTRE LOS ADOQUINES - Semifinalista en el Toronto Independent Festival of CIFT</p>
+		<h3>2019-2021</h3>
+		<p>· Planificación, rodaje y realización de la película-documental HIERBA ENTRE LOS ADOQUINES.</p>
 		<h3>2019</h3>
 		<p>· Oct/27 · Festival PERIFERIAS 20.0. CC Manuel Benito Moliner (Huesca).</p>
 		<p>· Sep/28 · Festival ZARATA 2019. Círculo de Bellas Artes (Madrid).</p>
@@ -201,6 +218,23 @@
 								<p></p>
 								<p>Planeada y liderada por En Busca Del Pasto, esta película, elaborada a modo de ensayo-documental, muestra esa diversidad a través de una treintena de libre-improvisadores afincados en su misma ciudad (Madrid), explorando las líneas vertebrales de esta peculiar práctica: espontaneidad, riesgo y experimentación; resistencia y tolerancia; apertura, diálogo y solidaridad entre ovejas negras. Una música que oscila entre la reflexión estética, la posición política y la dispersión lúdica y terapéutica. Entre lo raro, lo delicado y lo salvaje. Una práctica al margen de los circuitos y mercados oficiales, pero muy viva, muy abierta, muy libre, como la hierba que crece entre los adoquines. Una película sobre música y vida.</p>
 								<iframe class="vimeo" src="https://player.vimeo.com/video/563295800?h=652e4a7855" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+								
+								<h3>Recorrido</h3>
+								
+		<p>· Nov/21 · Semifinalista en el Toronto Independent Festival of CIFT</p>
+		<p>· Nov/21 · Nominada a Mejor Documental en el Rome Independent Prisma Awards</p>
+		<p>· Ene/22 · Selección oficial en el Best Documentary Award (Londres).</p>
+		<p>· Feb/22 · Selección oficial en el International Documentary Film Awards (Amsterdam).</p>
+		<p>· Mar/22 · Selección oficial en el International World Film Awards (Nueva York).</p>
+		<p>· May/22 · Semifinalista en el New Filmmakers New Orleans.</p>
+		<p>· May/22 · Nominada a Mejor Documental en el Portland New Alternative Voices.</p>
+		<p>· Sep/22 · Semifinalista en el Kansas Arthouse Music and Film Festival.</p>
+		<p>· Nov/22 · Semifinalista en el Peloponnisos International documentary Festival (Kalamata, Grecia).</p>
+		<p>· Nov/22 · Selección oficial en el XVIII Festival Transterritorial de Cine Underground (Buenos Aires).</p>
+		<p>· Nov/22 · Semifinalista en el Prage Underground FIlm Fest.</p>
+		
+		<p></p>
+		
 								<h3>Créditos</h3>
 <p></p>
 <p><b>En Busca Del Pasto:</b></p>
