--- a/web/index-en.html
+++ b/web/index-en.html
@@ -75,10 +75,10 @@
 								<h2 class="major">LOGBOOK</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 		<h3>2022</h3>
-		<p>· Nov/22 · GRASS BETWEEN COBBLESTONES - Semi-finalist at the en el Prague Underground FIlm Fest.</p>
+		<p>· Nov/22 · GRASS BETWEEN COBBLESTONES - Semi-finalist at the en el Prague Underground Film Fest.</p>
 		<p>· Nov/22 · GRASS BETWEEN COBBLESTONES - Official Selection at the XVIII Festival Transterritorial de Cine Underground (Buenos Aires).</p>
 		<p>· Sep/22 · Performance by Jorge Ruiz Abánades at the European Improvisation Meeting - Dance and Music (Nice)</p>
-		<p>· Sep/22 · GRASS BETWEEN COBBLESTONES - Projection at the European Improvisation Meeting - Dance and Music (Nice)</p>
+		<p>· Sep/22 · GRASS BETWEEN COBBLESTONES - Presentation of the film at the European Meeting of Improvisation - Dance and Music (Nice)</p>
 		<p>· Sep/22 · GRASS BETWEEN COBBLESTONES - Semi-finalist at the en el Kansas Arthouse Music and Film Festival.</p>
 		<p>· May/22 · GRASS BETWEEN COBBLESTONES - Nominated for Best Documentary at the Portland New Alternative Voices.</p>
 		<p>· May/22 · GRASS BETWEEN COBBLESTONES - Semi-finalist at the en el New Filmmakers New Orleans.</p>
@@ -87,9 +87,9 @@
 		<p>· Jan/22 · GRASS BETWEEN COBBLESTONES - Official Selection at the Best Documentary Award (London).</p>
 		<h3>2021</h3>
 		<p>· Nov/21 · GRASS BETWEEN COBBLESTONES - Nominated for Best Documentary at the Rome Independent Prisma Awards</p>
-		<p>· Nov/21 · GRASS BETWEEN COBBLESTONES - Semi-finalist at the Toronto Independent Festival of CIFT</p>
-		<h3>2019-2021</h3>
-		<p>· Planning, shooting and production of the documentary film GRASS BETWEEN COBBLESTONES.</p>
+		<p>· Nov/21 · GRASS BETWEEN COBBLESTONES - Semi-finalist at the Toronto Independent Film Festival of CIFT</p>
+		<h3>2020-2021</h3>
+		<p>· Planning and production of the documentary film GRASS BETWEEN COBBLESTONES.</p>
 		<h3>2019</h3>
 		<p>· Oct/27 · PERIFERIAS 20.0 Festival. CC Manuel Benito Moliner (Huesca).</p>
 		<p>· Sep/28 · ZARATA Fest 2019. Círculo de Bellas Artes (Madrid).</p>
@@ -223,7 +223,7 @@
 								<p></p>
 								<h3>Route</h3>
 								
-		<p>· Nov/21 · Semifinalist at Toronto Independent Festival of CIFT.</p>
+		<p>· Nov/21 · Semifinalist at Toronto Independent Film Festival of CIFT.</p>
 		<p>· Nov/21 · Nominated for Best Documentary at Rome Independent Prisma Awards.</p>
 		<p>· Jan/22 · Official Selection at the Best Documentary Award (London).</p>
 		<p>· Feb/22 · Official Selection at the International Documentary Film Awards (Amsterdam).</p>
@@ -231,8 +231,9 @@
 		<p>· May/22 · Semifinalist at the New Filmmakers New Orleans.</p>
 		<p>· May/22 · Nominated for Best Documentary at the Portland New Alternative Voices.</p>
 		<p>· Sep/22 · Semifinalist in the Kansas Arthouse Music and Film Festival.</p>
+		<p>· Sep/22 · Presentation of the film at the European Meeting of Improvisation - Dance and Music (Nice).</p>
 		<p>· Nov/22 · Official selection at the XVIII Transterritorial Underground Film Festival (Buenos Aires).</p>
-		<p>· Nov/22 · Semifinalist at the Prague Underground FIlm Fest.</p> <p>- Nov/22 - Semifinalist at the Prage Underground FIlm Fest.</p>
+		<p>· Nov/22 · Semifinalist at the Prague Underground Film Fest.</p>
 								<p></p>
 								<span class="image main"><img src="images/pantalla-laureles.png" alt="laurels" /></span>
 								
