--- a/web/index.html
+++ b/web/index.html
@@ -74,7 +74,7 @@
 								<h2 class="major">BITÁCORA</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 		<h3>2022</h3>
-		<p>· Nov/22 · HIERBA ENTRE LOS ADOQUINES - Semifinalista en el Prague Underground FIlm Fest.</p>
+		<p>· Nov/22 · HIERBA ENTRE LOS ADOQUINES - Semifinalista en el Prague Underground Film Fest.</p>
 		<p>· Nov/22 · HIERBA ENTRE LOS ADOQUINES - Selección oficial en el XVIII Festival Transterritorial de Cine Underground (Buenos Aires).</p>
 		<p>· Sep/22 · Actuación de Jorge Ruiz Abánades en el Encuentro Europeo de Improvisacón - Danza y Música (Niza)</p>
 		<p>· Sep/22 · HIERBA ENTRE LOS ADOQUINES - Presentación en el Encuentro Europeo de Improvisacón - Danza y Música (Niza)</p>
@@ -86,9 +86,9 @@
 		<p>· Ene/22 · HIERBA ENTRE LOS ADOQUINES - Selección oficial en el Best Documentary Award (Londres).</p>
 		<h3>2021</h3>
 		<p>· Nov/21 · HIERBA ENTRE LOS ADOQUINES - Nominada a Mejor Documental en el Rome Independent Prisma Awards</p>
-		<p>· Nov/21 · HIERBA ENTRE LOS ADOQUINES - Semifinalista en el Toronto Independent Festival of CIFT</p>
-		<h3>2019-2021</h3>
-		<p>· Planificación, rodaje y realización de la película-documental HIERBA ENTRE LOS ADOQUINES.</p>
+		<p>· Nov/21 · HIERBA ENTRE LOS ADOQUINES - Semifinalista en el Toronto Independent Film Festival of CIFT</p>
+		<h3>2020-2021</h3>
+		<p>· Planificación y realización de la película-documental HIERBA ENTRE LOS ADOQUINES.</p>
 		<h3>2019</h3>
 		<p>· Oct/27 · Festival PERIFERIAS 20.0. CC Manuel Benito Moliner (Huesca).</p>
 		<p>· Sep/28 · Festival ZARATA 2019. Círculo de Bellas Artes (Madrid).</p>
@@ -222,7 +222,7 @@
 								
 								<h3>Recorrido</h3>
 								
-		<p>· Nov/21 · Semifinalista en el Toronto Independent Festival of CIFT</p>
+		<p>· Nov/21 · Semifinalista en el Toronto Independent Film Festival of CIFT</p>
 		<p>· Nov/21 · Nominada a Mejor Documental en el Rome Independent Prisma Awards</p>
 		<p>· Ene/22 · Selección oficial en el Best Documentary Award (Londres).</p>
 		<p>· Feb/22 · Selección oficial en el International Documentary Film Awards (Amsterdam).</p>
@@ -230,8 +230,9 @@
 		<p>· May/22 · Semifinalista en el New Filmmakers New Orleans.</p>
 		<p>· May/22 · Nominada a Mejor Documental en el Portland New Alternative Voices.</p>
 		<p>· Sep/22 · Semifinalista en el Kansas Arthouse Music and Film Festival.</p>
+		<p>· Sep/22 · Presentación de la película en el Encuentro Europeo de Improvisacón - Danza y Música (Niza)</p>
 		<p>· Nov/22 · Selección oficial en el XVIII Festival Transterritorial de Cine Underground (Buenos Aires).</p>
-		<p>· Nov/22 · Semifinalista en el Prague Underground FIlm Fest.</p>
+		<p>· Nov/22 · Semifinalista en el Prague Underground Film Fest.</p>
 		
 		<p></p>
 								<span class="image main"><img src="images/pantalla-laureles.png" alt="laurels" /></span>
